# quantum-music

./: .gitignore  .pre-commit-config.yaml  README.md
Notebooks/: First Circuit.ipynb  amplitude-phase.ipynb  circuit-splitter.ipynb
Notebooks/Algorithms/: ghz.ipynb  qft.ipynb
Notebooks/Audio/: README.md  circuit_functions.py  music-controls.ipynb  notes-from-circuit.ipynb  play-notes.ipynb  test.py
Quantum-Music/: README.md  setup.cfg
Quantum-Music/notebooks/: README.md  quantum-music-tutorial.ipynb
Quantum-Music/notebooks/qasm/: canon.qasm  grover.qasm  pallet-town-short.qasm  pallet-town.qasm
Quantum-Music/src/quantum_music/: Jukebox.py  __init__.py  circuit_functions.py  display.py  scales.py
Quantum-Music/tests/: test_circuit_functions.py  test_jukebox.ipynb  test_play_notes.ipynb  test_scales.py
