[metadata]
name = quantum-music
version = 0.2.1-beta
author = SuperComposers
description = Generates audio from quantum circuits built with Qiskit
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6,<4
install_requires =
    qiskit==0.26.2
    jupyterlab
    ibm-quantum-widgets
    matplotlib
    seaborn # to plot q-sphere

[options.packages.find]
exclude =
    notebooks
    tests
where = src

[bdist_wheel]
universal = 1
